--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,8 +21,8 @@ en:
               blank: "can't be blank"
   common:
     confirm: 'Are you sure?'
-  shared:
-    header:
+  partials:
+    navbar:
       add: 'Add product'
   products:
     edit:
@@ -40,3 +40,20 @@ en:
       updated: 'Your product has been successfully updated'
     destroy:
       destroyed: 'Your product has been successfully destroyed'
+  categories:
+    category:
+      edit: 'Edit'
+      delete: 'Delete'
+    index:
+      title: 'Categories'
+      new: 'Add category'
+    edit:
+      title: 'Edit category'
+    create:
+      created: 'Your category has been successfully created'
+    update:
+      updated: 'Your category has been successfully updated'
+    destroy:
+      destroyed: 'Your category has been successfully destroyed'
+    new:
+      title: 'New category'
