--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,6 +34,7 @@ es:
       all: 'Todos'
       min_price: 'Precio mínimo'
       max_price: 'Precio máximo'
+      query_text: '¿Qué quieres buscar?'
     update:
       updated: 'Tu producto se ha actualizado correctamente'
     destroy:
