--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,12 @@ en:
     index:
       title: 'Products:'
       all: 'All'
+      min_price: 'Min price'
+      max_price: 'Max price'
+      query_text: 'What do you want to search?'
+      expensive: 'Expensive First'
+      cheaper: 'Cheaper first'
+      newest: 'Recently added'
     show:
       edit: 'Edit product'
       delete: 'Delete product'
