32 registro de usuarios

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,10 @@ en:
   partials:
     navbar:
       add: 'Add product'
+  authentication:
+    users:
+      create:
+        created: 'Your account has been created!'
   products:
     edit:
       title: 'Edit product'
