--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,10 @@ en:
     users:
       create:
         created: 'Your account has been created!'
+    sessions:
+      create:
+        created: 'Welcome!'
+        failed: 'Invalid login!'
   products:
     edit:
       title: 'Edit product'
