--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -28,6 +28,10 @@ es:
     users:
       create:
         created: 'Tu cuenta se ha creado!'
+    sessions:
+      create:
+        created: 'Bienvenido!'
+        failed: 'Login inválido!'
   products:
     new:
       title: 'Agregar Nuevo Producto'
