34 protegiendo nuestras paginas

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,8 @@ en:
               blank: "can't be blank"
   common:
     confirm: 'Are you sure?'
+    back: 'Go back'
+    not_logged_in: 'You have to login or create an account'
   partials:
     navbar:
       add: 'Add product'
