36 mejorando nuestra app

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,22 +5,21 @@ en:
   activerecord:
     models:
       product: Product
+      user: User
+      category: Category
     attributes:
       product:
         title: 'Title'
         description: 'Description'
         price: 'Price'
         photo: 'Photo'
-    errors:
-      models:
-        product:
-          attributes:
-            title:
-              blank: "can't be blank"
-            description:
-              blank: "can't be blank"
-            price:
-              blank: "can't be blank"
+      user:
+        email: 'Email'
+        username: 'Username'
+        password: 'Password'
+      category:
+        name: 'Name'
+
   common:
     confirm: 'Are you sure?'
     back: 'Go back'
@@ -28,14 +27,20 @@ en:
   partials:
     navbar:
       add: 'Add product'
+      login: 'Login'
+      register: 'Register'
+      logout: 'Logout'
   authentication:
     users:
       create:
-        created: 'Your account has been created!'
+        created: 'Welcome!'
+        failed: 'Invalid login!'
     sessions:
       create:
         created: 'Welcome!'
         failed: 'Invalid login!'
+      destroy:
+        destroyed: 'Session ended. Bye!'
   products:
     edit:
       title: 'Edit product'
