--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
     confirm: 'Are you sure?'
     back: 'Go back'
     not_logged_in: 'You have to login or create an account'
+    not_authorized: 'You don not have permissions for this action'
   partials:
     navbar:
       add: 'Add product'
