--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,3 @@
-# idioma ingles
 en:
   app_name: 'SellIT'
   meta_title: 'Buy and sell second hand products!'
@@ -19,12 +18,12 @@ en:
         password: 'Password'
       category:
         name: 'Name'
-
   common:
     confirm: 'Are you sure?'
     back: 'Go back'
     not_logged_in: 'You have to login or create an account'
     not_authorized: 'You don not have permissions for this action'
+    not_found: 'Not found'
   partials:
     navbar:
       add: 'Add product'
@@ -34,8 +33,7 @@ en:
   authentication:
     users:
       create:
-        created: 'Welcome!'
-        failed: 'Invalid login!'
+        created: 'Your account has been created!'
     sessions:
       create:
         created: 'Welcome!'
@@ -53,12 +51,13 @@ en:
       min_price: 'Min price'
       max_price: 'Max price'
       query_text: 'What do you want to search?'
-      expensive: 'Expensive First'
-      cheaper: 'Cheaper first'
+      expensive: 'Expensive first'
+      cheapest: 'Cheaper first'
       newest: 'Recently added'
     show:
       edit: 'Edit product'
       delete: 'Delete product'
+      view_more_products: 'View more products by %{username}'
     create:
       created: 'Your product has been successfully created'
     update:
